# youtube-creator-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
assets/prompts/: shepherd_prompts.txt
configs/: README.md
configs/profiles/: enchanted_melodies.yaml  lofi.yaml  mercy.yaml  shepherd.yaml  vibes.yaml  vibespro.yaml
screen_overlay/: README.md  overlay_props.example.json  package-lock.json  package.json
screen_overlay/src/: OverlayComposition.jsx  Root.jsx
src/youtube_creator_assistant/app/: cli.py  web.py
src/youtube_creator_assistant/core/: config.py  models.py  pipeline.py  render_plan.py  runtime.py  utils.py
src/youtube_creator_assistant/features/audio/: service.py
src/youtube_creator_assistant/features/descriptions/: service.py
src/youtube_creator_assistant/features/render/: builder.py
src/youtube_creator_assistant/features/replicate/: service.py
src/youtube_creator_assistant/profiles/: base.py  enchanted_melodies.py  lofi.py  mercy.py  registry.py  shepherd.py  vibes.py  vibespro.py
src/youtube_creator_assistant/providers/: openai_client.py  replicate.py  resolve.py  topaz.py
src/youtube_creator_assistant/tools/: __init__.py  fade_audio.py
tests/: test_audio_service.py  test_config.py  test_description_service.py  test_fade_audio_tool.py  test_pipeline.py  test_render_plan_builder.py  test_replicate_provider.py  test_resolve_provider.py  test_screen_replace_service.py  test_shepherd_replicate_service.py  test_theme_service.py  test_thumbnail_service.py  test_title_service.py  test_topaz_provider.py  test_utils.py  test_web_app.py
(+5 files in other folders)
